job-publisher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lavinmq
  namespace: lavinmq
  labels:
    app: lavinmq   
spec:
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: amqp
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: management
  selector:
    app: lavinmq
