job-publisher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lavinmq-dashboard-ingress
  namespace: lavinmq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lavinmq.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lavinmq
            port:
              number: 15672
